--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="my_digikala">دیجی‌کالای من</string>
     <string name="basket">سبد خرید</string>
     <string name="profile">پروفایل</string>
+    <string name="search_in">جستجو در</string>
 </resources>
