--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -6,4 +6,5 @@
     <string name="my_digikala">My Digikala</string>
     <string name="basket">Basket</string>
     <string name="profile">Profile</string>
+    <string name="search_in">search in</string>
 </resources>
