--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -7,4 +7,5 @@
     <string name="basket">Basket</string>
     <string name="profile">Profile</string>
     <string name="search_in">search in</string>
+    <string name="digikala_jet">DigiKala Jet</string>
 </resources>
