--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="basket">سبد خرید</string>
     <string name="profile">پروفایل</string>
     <string name="search_in">جستجو در</string>
+    <string name="digikala_jet">دیجی‌کالا جت</string>
 </resources>
