--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -16,4 +16,5 @@
     <string name="more">More</string>
     <string name="digi_shopping">Month Shopping</string>
     <string name="see_all">See All</string>
+    <string name="amazing_for_app">Amazing exclusive app</string>
 </resources>
