--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="more">بیشتر</string>
     <string name="digi_shopping">خرید سر ماه</string>
     <string name="see_all">مشاهده همه</string>
+    <string name="amazing_for_app">شگفت انگیز اختصاصی اپ</string>
 </resources>
